# gformer

./: README.md  baseline.py  constants.py  count_params.py  data.py  fun_data.py  infer.py  layers.py  overfit_dataset.parquet  overfit_sample.parquet  pyproject.toml  repomix-output.txt  smol.parquet  tokenizer.py  train.py  tree_utils.py  trees.py  utils.py
configs/: model_large.yaml  model_small.yaml
ge/: data.py  encoder.py  train.py
