[project]
name = "gformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "einops>=0.8.0",
    "filelock>=3.16.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.2",
    "smallperm>=0.1.12",
    "teedeelee>=0.1.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "treeswift>=1.1.45",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
]
